@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 27-02-2006 fixed: dvdplayer would resume properly after changing setting that required restart 
+ - 27-02-2006 fixed: when player was restarted due to some osd change, force player wasn't allways selected
  - 27-02-2006 fixed: dvdplayer didn't respect "Output To All Speakers" setting for 2ch AC3's
  - 27-02-2006 fixed: threading problem with smb directory
  - 27-02-2006 fixed: threading problem with opening/closing of files from dll's
